# cmake-u3d

./: CMakeLists.txt  README.md
Docs/Doxygen/: HowTo.txt  MakeDocsTest.bat  MakeDocsU3D.bat  MakeSpecifiedDocs.bat  doxygenCheatSheet.doc
Docs/Doxygen/Output/HTML_U3D/: U3D.css  _c_array_list_8h.html  _c_i_f_x_a_a_b_b_hierarchy_builder_8cpp.html  _c_i_f_x_a_a_b_b_hierarchy_builder_8h.html  _c_i_f_x_animation_modifier_8cpp.html  _c_i_f_x_animation_modifier_8h.html  _c_i_f_x_animation_modifier_decoder_8cpp.html  _c_i_f_x_animation_modifier_decoder_8h.html  _c_i_f_x_animation_modifier_encoder_8cpp.html  _c_i_f_x_animation_modifier_encoder_8h.html  _c_i_f_x_author_c_l_o_d_decoder_8cpp.html  _c_i_f_x_author_c_l_o_d_decoder_8h.html  _c_i_f_x_author_c_l_o_d_decoder___p_8cpp.html  _c_i_f_x_author_c_l_o_d_decoder___s_8cpp.html  _c_i_f_x_author_c_l_o_d_encoder_x_8cpp.html  _c_i_f_x_author_c_l_o_d_encoder_x_8h.html  _c_i_f_x_author_c_l_o_d_encoder_x___p_8cpp.html  _c_i_f_x_author_c_l_o_d_encoder_x___s_8cpp.html  _c_i_f_x_author_c_l_o_d_gen_8cpp.html  _c_i_f_x_author_c_l_o_d_gen_8h.html  _c_i_f_x_author_c_l_o_d_resource_8cpp.html  (+2600 more)
Docs/Doxygen/Setup/: Test.cfg  U3D.cfg  U3DBuildPage.h  U3DCodingConventionsIFXCOMPage.h  U3DCodingConventionsPage.h  U3DExtraPages.h  U3DFAQPage.h  U3DHighLevelUsageApproachesPage.h  U3DHowLoadAndWriteU3DPage.h  U3DHowMakeCLODMeshPage.h  U3DMainComponentsPages.h  U3DMainPage.h  U3DProjectConfigurationFilesPage.h  U3DSetupPage.h  U3DSoftwareContentsPage.h  U3DUsagePages.h
Docs/IntermediateFormat/: IDTF Format Description.doc
Docs/Templates/: U3D_doxygenFooter.htm  U3D_doxygenHeader.htm
Include/: IFXAdaptiveMetric.h  IFXAttributes.h  IFXAuthorPointSetAccess.h  IFXBaseOpenGL.h  IFXBonesManager.h  IFXBoundVolume.h  IFXCLODManagerInterface.h  IFXDataTypes.h  IFXDebug.h  IFXFastHeap.h  IFXHistogramDynamic.h  IFXMarkerX.h  IFXMeshGroup.h  IFXMixerQueue.h  IFXModifierDataElementIter.h  IFXMotionManager.h  IFXNeighborMesh.h  IFXOSRender.h  IFXOSUtilities.h  IFXRender.h  IFXRenderWindow.h  IFXResult.h  IFXScreenSpaceMetricInterface.h
Lib/Win32/Debug/: IFXCorePluginStatic.lib  IFXCoreStatic.lib  IFXImportingStatic.lib
Lib/Win32/Release/: IFXCorePluginStatic.lib  IFXCoreStatic.lib  IFXImportingStatic.lib
Source/Config/: make_Lin32.def  make_Mac32.def  make_Win32.def  u3d.conf  workspace_Lin32.xml  workspace_Mac32.xml  workspace_Win32.xml
Source/Config/Options/: AddGLLibs  AddLibControls  AddLibDialogs  AddLibInet  AddLibStd  AddLibUtil  CompileDebug  CompileDebugDynamic  CompileDebugDynamicWithMSExt  CompileRelease  CompileReleaseDynamic  CompileReleaseWithMSExt  IPP  LinkDebug  LinkRelease  c-code  cpp-code
Source/Config/Projects/: Base.xml  BaseMeshConverter.xml  BitDecoder.xml  BitEncoder.xml  BitHistogramDynamic.xml  BitStream.xml  Bones.xml  BoundHierarchy.xml  CLOD.xml  CLODAuthor.xml  Common.xml  Core.xml  CorePluginStatic.xml  CoreStatic.xml  Culling.xml  DataTypes.xml  Exporting.xml  ExportingPlugin.xml  Glyph2D.xml  HelloWorld.xml  IDTFCommon.xml  IDTFConverter.xml  IDTFConverterHelpers.xml  IJG.xml  Importing.xml  ImportingPlugin.xml  ImportingStatic.xml  Kernel.xml  LineSet.xml  Memory.xml  Mesh.xml  ModifierChain.xml  NURBSIFX.xml  NURBSImpExp.xml  NewBaseMesh.xml  PNG.xml  Palette.xml  Platform.xml  PointSet.xml  Predicates.xml  (+26 more)
Source/RTL/IFXCorePluginStatic/: IFXCorePluginStatic.cpp
Source/RTL/IFXCoreStatic/: IFXCoreStatic.cpp
Source/Samples/BaseMeshConverter/: Driver.cpp  SceneUtilities.cpp  SceneUtilities.h
Source/Samples/HelloWorld/: HelloWorld.cpp
Source/Samples/IntermediateFormat/: convert.bat  convert.pl  convert.sh  convert_all.bat  validatefull.pl
Source/Samples/NewBaseMesh/: CIFXNewBaseMesh.cpp  CIFXNewBaseMesh.h  CIFXNewBaseMeshDecoder.cpp  CIFXNewBaseMeshDecoder.h  CIFXNewBaseMeshEncoder.cpp  CIFXNewBaseMeshEncoder.h  IFXNewBaseMesh.def  IFXNewBaseMesh.h  IFXNewBaseMeshDllMain.cpp  IFXNewBaseMeshPlugin.cpp  IFXNewBaseMeshPluginCIDs.h  IFXNewBaseMeshPluginGuids.cpp  IFXNewBaseMeshPluginInterfaces.h  NewBaseMeshUtils.cpp  NewBaseMeshUtils.h
Source/Samples/QrtzPlayer/: qrtzplayer.cpp  u3dplayer.cpp  u3dplayer.h
Source/Samples/SamplePlayer/: ReadMe.txt  SPlayerMain.cpp
Source/Samples/SampleViewerQrtz/: U3DViewerQrtz.cpp
Source/Samples/SampleViewerWin32/: SamplePlayer.rc  U3DViewer.h  U3DViewerWin.cpp  resource.h
Source/Samples/SampleViewerX/: U3DViewer.h  U3DViewerX.cpp
Source/Samples/SceneHelpers/: U3DCameraNavigation.cpp  U3DCameraNavigation.h  U3DSceneUtilities.cpp  U3DSceneUtilities.h
Source/Samples/TextureModifier/: CIFXTextureModifier.cpp  CIFXTextureModifier.h  CIFXTextureModifierDecoder.cpp  CIFXTextureModifierDecoder.h  CIFXTextureModifierEncoder.cpp  CIFXTextureModifierEncoder.h  IFXTextureModifier.h  IFXTextureModifierPlugin.cpp  IFXTextureModifierPluginCIDs.h  IFXTextureModifierPluginGuids.cpp  IFXTextureModifierPluginInterfaces.h
Source/Samples/TrueType/: TTFontExtract.cpp  TTFontExtract.h  TrueType.cpp  TrueType.h  TrueTypeLauncher.cpp  readme.txt
Source/Samples/u3dparser/: makefile  makefile.def
Source/Samples/winXPlayer/: u3dplayer.h  xplayer.cpp
Source/Templates/: CIFXComponentName.cpp  CIFXComponentName.h  IFXInterfaceName.h  IFXPluginName.cpp  IFXPluginNameCIDs.h  IFXPluginNameDllMain.cpp  IFXPluginNameGuids.cpp  IFXPluginNameInterfaces.h  IFXUnitTest.h  ProjectConfig.xml
Source/Templates/ExtensionModifier/: CIFXModifierName.cpp  CIFXModifierName.h  CIFXModifierNameDecoder.cpp  CIFXModifierNameDecoder.h  CIFXModifierNameEncoder.cpp  CIFXModifierNameEncoder.h
Source/Tests/UnitTesting/: build_rec.pl  chmod.sh  cl.pat  clean.pl  create_make.pl  daily.pl  gcc.pat  gen_all.pl  gen_db.pl  link.pat  linkLin.pat  linkMac.pat  makeFileLin.pat  makeFileMac.pat  makefile.pat  run.bat  run.sh  sync.pl  vcproj.pat
Source/Tools/BuildSystem/: build.pm  build.sh  clean_all.pl  collect_project_data.pl  config.pl  create_make.pm  parsing.pl  parsing_and_create.pl  util.pm  vs7_convert.bat  vs7_files.pm  vs7_generate.pl  vs7_sln.pm  vs7_vcproj.pm  xml_parser.pl
Source/Tools/UnitTesting/: readme.txt
(+580 files in other folders)
